[package]
name = "locksmith"
version = "0.1.0"
edition = "2021"
authors = ["MeloenCoding"]

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
directories = "4.0.1"
rand = "0.8.5"
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.149", features = ["derive"] }
